--- a/css/styles.css
+++ b/css/styles.css
@@ -411,8 +411,8 @@ a {
 
 .company-list {
     display: flex;
-    margin-top: 50px;
     justify-content: space-around;
+    margin-top: 50px;
 }
 
 .company-item + .company-item {
@@ -486,7 +486,6 @@ address{
 
 .footer-socials {
     margin-left: 70px;
-    margin-right: 93px;
 }
 
 .footer-socials-text {
@@ -534,8 +533,6 @@ address{
 .footer-mailing{
     margin-left: auto;
     display: flex;
-    align-items: baseline;
-    justify-content: space-between;
 }
 
 .footer-mailing-title{
@@ -763,7 +760,7 @@ address{
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--first-text);
-    padding-bottom: 12px;
+    margin-bottom: 12px;
 }
 
 .input-wrap {
@@ -828,11 +825,13 @@ address{
     background-color: var(--corporate-color);
     border: 0;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .modal-check:checked + .modal-check-label svg {
     fill: #fff;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .modal-check-label{
